Make it a bit more readable.

--- a/THANKS
+++ b/THANKS
@@ -1,10 +1,10 @@
-Thanks to Mikulas Patocka <mikulas@artax.karlin.mff.cuni.cz> for excellent
-browser on which ELinks is based and for the long hours, gained experience and
+Thanks to Mikulas Patocka <mikulas@artax.karlin.mff.cuni.cz> for the excellent
+browser on which ELinks is based and for the long hours, gaining experience and
 occasional amusement when deciphering and cleaning its source.
 
-Thanks also to Karel & Petr Kulhavy and Michal Pergel for inspiration for new
-features, and longer hours and constant amusement when deciphering code
-produced by them.
+Thanks also to Karel Kulhavy, Petr Kulhavy and Michal Pergel for giving
+inspiration to new features, and longer hours and constant amusement when
+deciphering code produced by them.
 
 Thanks to HSTI (http://www.hsti.com/) for sponsoring ELinks development.
 
