--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 Thanks to Mikulas Patocka <mikulas@artax.karlin.mff.cuni.cz> for the excellent
-browser on which ELinks is based and for the long hours, gaining experience and
+browser on which ELinks is based and for the long hours, gained experience and
 occasional amusement when deciphering and cleaning its source.
 
 Thanks also to Karel Kulhavy, Petr Kulhavy and Michal Pergel for giving
