First batch of merged Danish translations by Morten Bo Johansen.

--- a/AUTHORS
+++ b/AUTHORS
@@ -365,6 +365,9 @@ Mikulas Patocka <mikulas@artax.karlin.mff.cuni.cz>
 	One of Links authors; a lot of misc. features & code
 	SMB support
 
+Morten Bo Johansen <mojo@mbjnet.dk>
+	Danish translation
+
 Muhamad Faizal <faizal@mfaizal.net>
 	Indonesian translation
 
@@ -534,4 +537,4 @@ Yurii Rashkovskii <yrashk@univer.kharkov.ua>
 	RPM spec file in contrib/
 	RedHat compilation fixes
 
-$Id: AUTHORS,v 1.182 2005/01/03 17:58:33 jonas Exp $
+$Id: AUTHORS,v 1.183 2005/01/05 23:55:24 jonas Exp $
