Zdenek Burda donated the elinks.cz domain (reg in progress).

--- a/THANKS
+++ b/THANKS
@@ -13,3 +13,5 @@ resources for our mailing lists at linuxfromscratch.org servers.
 
 Thanks to Jan Sembera <jan.sembera@flexible.cz> for providing us the space and
 bandwidth on his server for elinks.or.cz and cvs.elinks.or.cz.
+
+Thanks to Zdenek Burda for donating the elinks.cz domain.
