--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ elinks (0.11.0-0) unstable; urgency=low
   * Only remove CVS files from packaging directory
   * Install elinks.conf from contrib/
   * Install documentation files about using ELinks from doc/
+  * Remove more unrelevant files from contrib/
 
  -- Jonas Fonseca <fonseca@diku.dk>  Sun, 11 Jan 2005 01:42:45 +0100
 
