--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ elinks (0.11.0-0) unstable; urgency=low
   * Install documentation files about using ELinks from doc/
   * Remove more unrelevant files from contrib/
   * List docs in elinks.docs file
+  * Support for DEB_BUILD_OPTIONS
 
  -- Jonas Fonseca <fonseca@diku.dk>  Sun, 11 Jan 2005 01:42:45 +0100
 
