--- a/debian/changelog
+++ b/debian/changelog
@@ -7,10 +7,25 @@ elinks (0.11.0-0) unstable; urgency=low
   * List docs in elinks.docs file
   * Support for DEB_BUILD_OPTIONS
   * Update and cleanup debian/rules
-  * Pass -force-html in the debian/mime mailcap entries so problems
-    with viewing files without an extension is fixed
+  * Pass -force-html in the debian/mime mailcap entries so problems with
+    viewing files without an extension is fixed
+  * Many problems related to mangleme tools fixed (closes: #277283)
+  * Documentation updates (closes: #215619)
+  * Fix IPv6 URI parsing (closes: #173378)
+  * Send the previous URL as referer by default (closes: #198684)
+  * Bump up the dependency on dephelper (closes: #247280)
+  * Force dumping to stdout when ELinks connects to a pipe instead of a
+    terminal, even if the boolean argument to -dump is zero (closes: #231663)
+  * Suggest filename based on Content-Disposition (closes: #171571)
+  * Update the manpage and add -stdin command line option for compatibility
+    even though reads from stdin are autodetected (closes: #281010)
+  * Add support for recognizing mixed-case URI schemes (closes: #242140)
+  * Fix xterm detection code, thanks Adam Borowski (closes: #228977)
+  * Fix handling of id names in preformatted content (closes: #219331)
+  * Fix assertion failure when searching in empty documents (closes: #238281)
+  * Remove www-browser alternative, thanks Andreas Metzler (closes: #247495)
 
- -- Jonas Fonseca <fonseca@diku.dk>  Tue, 11 Jan 2005 16:36:46 +0100
+ -- Jonas Fonseca <fonseca@diku.dk>  Tue, 11 Jan 2005 18:06:35 +0100
 
 elinks (0.9.3-1) unstable; urgency=low
 
